--- a/adminPanel/templates/gestion_pedidos/detail_orden.html
+++ b/adminPanel/templates/gestion_pedidos/detail_orden.html
@@ -111,7 +111,7 @@
                         <td class="py-4 px-4">
                             <div class="flex items-center">
                                 <div class="w-10 h-10 bg-gray-200 rounded-lg flex items-center justify-center mr-3">
-                                    <img src="{{ item.producto.main_image.url }}" alt="{{ item.producto.name }}" class="w-8 h-8 object-cover rounded-lg" />
+                                    <img src="{{ item.producto.main_image.url }}" alt="{{ item.producto.name }}" class="w-8 h-8 object-cover rounded-lg" loading="lazy"/>
                                 </div>
                                 <div>
                                     <p class="font-semibold text-gray-800">{{ item.producto.name }}</p>
