--- a/adminPanel/templates/gestion_productos/detail_product.html
+++ b/adminPanel/templates/gestion_productos/detail_product.html
@@ -24,14 +24,14 @@
           <div style="display: flex; gap: 15px; margin-bottom: 20px; align-items: center; flex-wrap: wrap;">
             <div style="width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; overflow: hidden;">
               {% if product.secondary_image.url %}  
-              <img id="main-image" src="{{ product.main_image.url}}" alt="{{ product.name }}" style="width: 100%; height: auto; object-fit: cover; border-radius: 8px; cursor: pointer; transition: opacity 0.5s ease;">
+              <img id="main-image" src="{{ product.main_image.url}}" alt="{{ product.name }}" style="width: 100%; height: auto; object-fit: cover; border-radius: 8px; cursor: pointer; transition: opacity 0.5s ease;" loading="lazy">
               {% else %}
                 <p>Sin imagen</p>
               {% endif %}
             </div>
 
             {% if product.secondary_image.url %}
-            <img id="secondary-image" src="{{ product.secondary_image.url }}" alt="{{ product.name }}" class="secondary-image" width="100" height="100" style="object-fit: cover; border-radius: 8px; border: 1px solid #ddd; cursor: pointer; transition: transform 0.3s ease; border: 2px solid transparent;" onclick="switchImages()">
+            <img id="secondary-image" src="{{ product.secondary_image.url }}" alt="{{ product.name }}" class="secondary-image" width="100" height="100" style="object-fit: cover; border-radius: 8px; border: 1px solid #ddd; cursor: pointer; transition: transform 0.3s ease; border: 2px solid transparent;" onclick="switchImages()" loading="lazy">
             {% else %}
             <p>Sin imagen</p>
             {% endif %}
