--- a/products/templates/list_products.html
+++ b/products/templates/list_products.html
@@ -104,7 +104,7 @@
                 <div class="product-container">
                     {% for product in product_list %}
                         {% if product.main_image and product.stock > 0 %}
-                        <div class="product-card">
+                        <div class="product-card" data-href="{% url 'detail_product' product.slug %}">
                             <div class="product-image">
                                 {% if product.main_image %}
                                 <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px;" loading="lazy">
@@ -119,11 +119,10 @@
                                 <div class="product-price">{{ product.price | format_price }}</div>
                                 <form action="{% url 'add' %}" method="post">
                                     {% csrf_token %}
-                                    <input type="hidden" name="product_id" value="{{ product_vent.id }}">
+                                    <input type="hidden" name="product_id" value="{{ product.id }}">
                                     <input type="hidden" name="quantity" value="1">
                                     <button type="submit" class="btn rounded-pill px-4 add-to-cart-a">Añadir al carrito</button>
                                 </form>
-                                <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
                             </div>
                         </div>
                         {% endif %}
@@ -274,7 +273,6 @@
                             <input type="hidden" name="quantity" value="1">
                             <button type="submit" class="btn rounded-pill px-4 add-to-cart-a">Añadir al carrito</button>
                         </form>
-                        <a class="btn add-to-cart-a" href="{% url 'detail_product' product.slug %}">Ir al producto</a>
                     </div>
                 </div>
                 {% endif %}
