--- a/adminPanel/templates/gestion_productos/list_product.html
+++ b/adminPanel/templates/gestion_productos/list_product.html
@@ -221,7 +221,7 @@
                 {% include 'gestion_productos/filtros/filtro_estado_product.html' %}
             </div>
         </div>
-        <a href="{% url 'agregar_product' %}" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"> Agregar producto</a>
+        <a href="{% url 'agregar_product' %}" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transform hover:scale-105 transition-all duration-200 active:scale-95">Agregar producto</a>
     </div>
 
     <!-- Productos -->
