--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% load precios_tag %}
 {% load static %}
-<div style="margin-bottom: 5%;">
+<div>
 </div>
 
 <!DOCTYPE html>
@@ -196,7 +196,7 @@
             <p>Tienda especializada en productos tecnológicos de alta calidad para músicos y entusiastas de la tecnología.</p>
             <p><strong>Dirección:</strong> Av. Tecnología 123, Santiago</p>
             <p><strong>Teléfono:</strong> +56 2 2345 6789</p>
-            <p><strong>Email:</strong> contacto@bytebeat.cl</p>
+            <p><strong>Email:</strong> contactobyteandbeat@gmail.com</p>
         </div>
         <div class="social-icons">
             <a href="#" class="social-icon">
