--- a/products/templates/productos_categorias_marcas.html
+++ b/products/templates/productos_categorias_marcas.html
@@ -97,7 +97,7 @@
     <div class="contenedor-producto-paginador">
         <div class="product-container">
             {% for product in productos %}
-            <div class="product-card">
+            <div class="product-card" data-href="{% url 'detail_product' product.slug %}">
                 <div class="product-image">
                     {% if product.main_image %}
                     <img src="{{ product.main_image.url }}" alt="{{ product.name }}" style="width: 100px; height: 100px; " loading="lazy">
@@ -110,9 +110,12 @@
                     <div class="product-brand">{{ product.brand | title}}</div>
                     <div class="product-name">{{ product.name | title }}</div>
                     <div class="product-price">{{ product.price | format_price }}</div>
-                    <!-- <button class="add-to-cart">Agregar al carrito</button> -->
-                    <button class="add-to-cart-a"><a href="{% url 'detail_product' product.slug %}">Ir al
-                            producto</a></button>
+                    <form action="{% url 'add' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="product_id" value="{{ product.id }}">
+                        <input type="hidden" name="quantity" value="1">
+                        <button type="submit" class="btn rounded-pill px-4 add-to-cart-a">Añadir al carrito</button>
+                    </form>
                 </div>
             </div>
             {% endfor %}
@@ -129,6 +132,20 @@
 <script>
 // JavaScript para manejar los filtros móviles
 document.addEventListener('DOMContentLoaded', function() {
+
+const cards = document.querySelectorAll('.product-card');
+    cards.forEach(function(card) {
+        card.addEventListener('click', function (e) {
+            // Evita el redireccionamiento si se hizo clic en el botón o dentro del formulario
+            if (e.target.closest('form')) return;
+
+            const href = card.getAttribute('data-href');
+            if (href) {
+                window.location.href = href;
+            }
+        });
+    });
+    
     const mobileFilterToggle = document.getElementById('mobileFilterToggle');
     const filtersPanel = document.getElementById('filtersPanel');
     const closeFilters = document.getElementById('closeFilters');
